# ngl-pokepaste

./: .clang-format  .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  LICENSE.md  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/ngl-pokepaste/: ngl-pokepaste.hpp  pokepaste.hpp
test/: CMakeLists.txt
test/resources/: 1b4fb2ac5abe5420.paste  23ece1d761314bdd.paste  3640e9bb79dfdaa7.paste  4d8bea86cb564226.paste  50f999f614051130.paste  61e17abc97da45dc.paste  89f44b840edbfc53.paste  afd0cd1e0c0eb905.paste  da35d0c212aac16b.paste  e509667b0690a37b.paste  f6229d2c867e21d6.paste
test/source/: ngl-pokepaste_test.cpp
